--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hacker-news",
+  "author": "Istratov Alexey <istratov_alexey@bk.ru>",
   "private": true,
   "version": "0.0.0",
   "type": "module",
